--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="container">
     <small class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</small>
-    <small class="block">Made with <i class="fa fa-heart" aria-hidden="true" style="color:#DD3D36"></i> using <a href="http://jekyllrb.com/">Jekyll</a>&middot; <i class="fa fa-code"></i> on <a href="https://github.com/jbilinski/jbilinski.github.io_jekyll_source">GitHub<i class="fa fa-github" aria-hidden="true"></i></a>.</small><small><sub>Typeface by <a href="https://www.fontsquirrel.com/fonts/dejavu-sans-mono">DejaVu Sans Mono</a> and <a href="http://fontawesome.io/">Font Awesome</a>.</small></sub>
+    <small class="block">Made with <i class="fa fa-heart" aria-hidden="true" style="color:#DD3D36"></i> using <a href="http://jekyllrb.com/">Jekyll</a>&middot; <i class="fa fa-code"></i> on <a href="https://github.com/jbilinski/jbilinski.github.io_jekyll_source">GitHub</a><i class="fa fa-github-alt"></i>. </small><small><sub>Typeface by <a href="https://www.fontsquirrel.com/fonts/dejavu-sans-mono">DejaVu Sans Mono</a> and <a href="http://fontawesome.io/">Font Awesome</a>.</small></sub>
     <small><sub><a href="https://github.com/heiswayi/thinkspace">Thinkspace</a> theme by <a href="http://heiswayi.github.io/">Heiswayi Nrird</a>.</sub></small>
   </div>
 </footer>
