--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm <a href="{{ '/about' | prepend: site.author.url }}" target="_blank"><strong class="author-name" itemprop="name">{{ site.author.name }}</strong></a>, an <em itemprop="jobTitle">{{ site.author.job }}</em>. <br>
-    {{ site.author.bio }}</p>
+    <p class="lead">Hi, I'm <a href="{{ '/about' | prepend: site.author.url }}" target="_blank"><strong class="author-name" itemprop="name">{{ site.author.name }}</strong></a>, an <em itemprop="jobTitle">{{ site.author.job }}</em>.</p> <br>
+    <p>{{ site.author.bio }}</p>
   </div>
 </section>
