--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,7 +7,7 @@
       <script>
 
           var disqus_config = function () {
-              this.page.url = '{{ site.url }}{{ post.url }}';
+              this.page.url = '{{ page.path }}';
               this.page.identifier = '{{ page.id }}';
               this.page.title = '{{ page.title }}';
           };
