--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,26 +4,30 @@
     <div class="container">
       <h3><i class="icon icon-comments-o"></i> Comments</h3>
       <div id="disqus_thread"></div>
-      <script>
+<script type="text/javascript"> 
+4       var disqus_shortname = '{{ site.disqus_shortname }}'; 
+5       {% if page.comments == true %} 
+6         {% comment %} `page.comments` can be only be set to true on pages/posts, so we embed the comments here. {% endcomment %} 
+7         // var disqus_developer = 1; 
+8         var disqus_identifier = '{% if page.disqus_identifier %}{{ page.disqus_identifier}}{% else %}{{ page.id }}{% endif %}'; 
+9         var disqus_url = '{{ site.url }}{{ page.url }}'; 
+          var disqus_title = '{{ page.title }}';
+10         var disqus_script = 'embed.js'; 
+11       {% endif %} 
+12     (function () { 
+13     {% if page.comments == true %}       
+14       var embedScript = document.createElement('script'); 
+15       embedScript.type = 'text/javascript'; 
+16       embedScript.async = true; 
+17       embedScript.src = 'http://' + disqus_shortname + '.disqus.com/embed.js'; 
+18       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(embedScript); 
+19     {% endif %} 
+20       var countScript = document.createElement('script'); 
+21       countScript.type = 'text/javascript'; 
+22       countScript.async = true; 
+23       countScript.src = 'http://' + disqus_shortname + '.disqus.com/count.js'; 
+24       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(countScript); 
+25     }()); 
+26 </script> 
 
-          var disqus_config = function () {
-              var page_url = '{{ page.path }}';
-              this.page.identifier = '{{ page.id }}';
-              this.page.title = '{{ page.title }}';
-          };
-          
-          (function() {  
-              var d = document, s = d.createElement('script');
-              
-              s.src = '//{{ site.disqus_shortname }}.disqus.com/embed.js';  
-              
-              s.setAttribute('data-timestamp', +new Date());
-              (d.head || d.body).appendChild(s);
-          })();
-      </script>
-      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
-    </div>
-
-  </aside>
 {% endif %}
