--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,33 +1,28 @@
-{% if page.comments %}
-  <aside id="comments" class="disqus">
-
-    <div class="container">
-      <h3><i class="icon icon-comments-o"></i> Comments</h3>
-      <div id="disqus_thread"></div>
-<script type="text/javascript"> 
-4       var disqus_shortname = '{{ site.disqus_shortname }}'; 
-5       {% if page.comments == true %} 
-6         {% comment %} `page.comments` can be only be set to true on pages/posts, so we embed the comments here. {% endcomment %} 
-7         // var disqus_developer = 1; 
-8         var disqus_identifier = '{% if page.disqus_identifier %}{{ page.disqus_identifier}}{% else %}{{ page.id }}{% endif %}'; 
-9         var disqus_url = '{{ site.url }}{{ page.url }}'; 
-          var disqus_title = '{{ page.title }}';
-10         var disqus_script = 'embed.js'; 
-11       {% endif %} 
-12     (function () { 
-13     {% if page.comments == true %}       
-14       var embedScript = document.createElement('script'); 
-15       embedScript.type = 'text/javascript'; 
-16       embedScript.async = true; 
-17       embedScript.src = 'http://' + disqus_shortname + '.disqus.com/embed.js'; 
-18       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(embedScript); 
-19     {% endif %} 
-20       var countScript = document.createElement('script'); 
-21       countScript.type = 'text/javascript'; 
-22       countScript.async = true; 
-23       countScript.src = 'http://' + disqus_shortname + '.disqus.com/count.js'; 
-24       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(countScript); 
-25     }()); 
-26 </script> 
-
-{% endif %}
+{% if site.disqus_short_name and page.comments != false %}
+<aside id="comments" class="disqus">
+  <div class="container">
+    <h3><i class="icon icon-comments-o"></i> Comments</h3>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript"> 
+       var disqus_shortname = '{{ site.disqus_shortname }}'; 
+       {% if page.comments == true %} 
+        var disqus_identifier = '{% if page.disqus_identifier %}{{ page.disqus_identifier}}{% else %}{{ page.id }}{% endif %}'; 
+        var disqus_url = '{{ site.url }}{{ page.url }}'; 
+        var disqus_title = '{{ page.title }}';
+        var disqus_script = 'embed.js'; 
+       {% endif %} 
+     (function () { 
+     {% if page.comments == true %}       
+       var embedScript = document.createElement('script'); 
+       embedScript.type = 'text/javascript'; 
+       embedScript.async = true; 
+       embedScript.src = 'http://' + disqus_shortname + '.disqus.com/embed.js'; 
+       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(embedScript); 
+     {% endif %} 
+       var countScript = document.createElement('script'); 
+       countScript.type = 'text/javascript'; 
+       countScript.async = true; 
+       countScript.src = 'http://' + disqus_shortname + '.disqus.com/count.js'; 
+       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(countScript); 
+     }()); 
+</script> {% endif %}
