--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,6 @@
---- layout: default ---
+--- 
+layout: default 
+---
 
 <article class="post container" itemscope itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
