variable name correction

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-{% if site.disqus_short_name and page.comments != false %}
+{% if site.disqus_shortname and page.comments != false %}
 <aside id="comments" class="disqus">
   <div class="container">
     <h3><i class="icon icon-comments-o"></i> Comments</h3>
