utterances property update
pass static issue-term instead of lookup
move to dedicated comments repo

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 {% if page.comments != false %}
 <script src="https://utteranc.es/client.js"
-        repo="jbilinski/jbilinski.github.io"
-        issue-term="og:title"
+        repo="jbilinski/jbilinski.github.io-discussion"
+        issue-term='{{ page.id }}'
         label="ScriptOps💬"
         theme="github-light"
         crossorigin="anonymous"
