--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,9 +1,18 @@
 {% if page.comments != false %}
-<script src="https://utteranc.es/client.js"
-        repo="jbilinski/jbilinski.github.io-discussion"
-        issue-term='{{ page.id }}'
-        label="ScriptOps💬"
-        theme="github-light"
+<script src="https://giscus.app/client.js"
+        data-repo="jbilinski/jbilinski.github.io-discussion"
+        data-repo-id="MDEwOlJlcG9zaXRvcnk0MDUyOTQ5MzI="
+        data-category="Announcements"
+        data-category-id="DIC_kwDOGChPVM4B_A0Q"
+        data-mapping="specific"
+        data-term="{{ page.id }}"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
         crossorigin="anonymous"
         async>
-</script> {% endif %}
+</script>
+{% endif %}
