Discussion Repo category matching

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,7 +2,7 @@
 <script src="https://giscus.app/client.js"
         data-repo="jbilinski/jbilinski.github.io-discussion"
         data-repo-id="MDEwOlJlcG9zaXRvcnk0MDUyOTQ5MzI="
-        data-category="Announcements"
+        data-category="Post Discussions"
         data-category-id="DIC_kwDOGChPVM4B_A0Q"
         data-mapping="specific"
         data-term="{{ page.id }}"
