--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,6 @@ layout: default
     {{ content }} {% include post-share.html %}
   </div>
 </article>
-
+<div class="disqus">
 {% include comments.html %}
+</div>
