--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
   <div class="container">
     <small class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</small>
     <small class="block">Made with <i class="fa fa-heart" aria-hidden="true" style="color:#DD3D36"></i> using <a href="http://jekyllrb.com/">Jekyll</a>&middot; <i class="fa fa-code"></i> on <a href="https://github.com/jbilinski/jbilinski.github.io">GitHub</a> <i class="fa fa-github-alt"></i>. </small><small><sub>Typeface by <a href="https://www.fontsquirrel.com/fonts/dejavu-sans-mono">DejaVu Sans Mono</a> and <a href="http://fontawesome.io/">Font Awesome</a>.</small></sub>
-    <small><sub><a href="https://github.com/heiswayi/thinkspace">Thinkspace</a> theme by <a href="http://heiswayi.github.io/">Heiswayi Nrird</a>.</sub></small>
+    <small><sub>Thanks to <a href="http://heiswayi.github.io/">Heiswayi Nrird</a> <i class="fa fa-star"></i> for original theme.</sub></small>
   </div>
 </footer>
