--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,6 @@ layout: default
     {{ content }} {% include post-share.html %}
   </div>
 </article>
-<div class="disqus">
+<div class="gisqus">
 {% include comments.html %}
 </div>
